<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorAccent">

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="0"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:buttonTint="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_goes_here"
                android:textColor="@color/colorTextGrey"
                android:textSize="17sp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/priority_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hash"
                android:gravity="end"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorTextDarkerGrey"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_date_text"
                android:textColor="@color/colorTextGrey" />

            <TextView
                android:id="@+id/dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dash"
                android:textColor="@color/colorTextGrey" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/_1h_30m"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextGrey" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

        </LinearLayout>

        <TextView
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_name"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes_go_here"
            android:textColor="@color/colorTextDarkerGrey" />

    </LinearLayout>
</LinearLayout>
