<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PomodoroActivity"
        android:background="@color/colorAccent">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/work_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pomodoro"
                android:textColor="@color/colorTextGrey"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="0dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minutes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextGrey"
                android:textSize="72sp" />

            <TextView
                android:id="@+id/seconds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorTextGrey"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="72sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextGrey"
                android:text="@string/minutes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextGrey"
                android:text="@string/seconds" />

        </LinearLayout>


        <Button
            android:id="@+id/start_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="40dp"
            android:onClick="startPomodoro"
            android:text="@string/start"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/pause_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="40dp"
            android:onClick="pausePomodoro"
            android:text="@string/pause"
            android:visibility="gone"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/stop_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="40dp"
            android:onClick="stopAlarm"
            android:text="@string/stop"
            android:visibility="gone"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

</android.support.v4.widget.DrawerLayout>