<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="20dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/account"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextGrey"
                android:textSize="30sp"
                android:clickable="true"
                android:focusable="false"
                android:onClick="goToAccount"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_settings_20px"
                android:drawableLeft="@drawable/ic_baseline_settings_20px"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="20dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/settings"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextGrey"
                android:textSize="30sp"
                android:clickable="true"
                android:focusable="false"
                android:onClick="goToSettings"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_help_24px"
                android:drawableLeft="@drawable/ic_baseline_help_24px"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="20dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/about_us"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextGrey"
                android:textSize="30sp"
                android:clickable="true"
                android:focusable="false"
                android:onClick="goToAboutUs"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu"/>

</android.support.v4.widget.DrawerLayout>